update ui timeline & try fix carousel

--- a/src/index.html
+++ b/src/index.html
@@ -72,23 +72,23 @@
                 class="m-auto flex h-6 w-6 flex-col justify-around md:h-7 md:w-7"
               >
                 <span
-                  class="block h-[2px] w-full bg-white transition-all"
+                  class="block h-[2px] w-full bg-white transition-all duration-300"
                 ></span>
                 <span
-                  class="block h-[2px] w-full bg-white transition-all"
+                  class="block h-[2px] w-full bg-white transition-all duration-300"
                 ></span>
                 <span
-                  class="block h-[2px] w-full bg-white transition-all"
+                  class="block h-[2px] w-full bg-white transition-all duration-300"
                 ></span>
               </div>
             </button>
             <!-- menu -->
             <div
               id="navigation-menu"
-              class="absolute top-20 left-0 z-30 hidden w-full justify-center opacity-0 shadow-2xl transition duration-1000 lg:static lg:block lg:h-full lg:w-full lg:shadow-none"
+              class="absolute top-20 left-0 z-30 hidden w-full justify-center opacity-0 shadow-2xl transition duration-300 lg:static lg:block lg:h-full lg:w-full lg:opacity-100 lg:shadow-none"
             >
               <ul
-                class="flex h-64 w-10/12 flex-col items-center justify-evenly border-[.5px] border-neutral-300 bg-transparent text-sm font-medium tracking-wider backdrop-blur-xl lg:h-full lg:flex-row lg:items-center lg:justify-around lg:border-none lg:backdrop-blur-none"
+                class="flex h-64 w-10/12 flex-col items-center justify-evenly border-[.5px] border-neutral-300 bg-neutral-800 text-sm font-medium tracking-wider lg:h-full lg:flex-row lg:items-center lg:justify-around lg:border-none lg:bg-transparent lg:backdrop-blur-none"
               >
                 <li class="">
                   <a
@@ -399,7 +399,7 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Podcast
                 </p>
@@ -409,7 +409,7 @@
                 class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Dengan Tema “How to improve yourself, with your creativity and
                   what you have” Merupakan Kompetisi yang membutuhkan pemikiran
@@ -424,10 +424,11 @@
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <button
-				  onclick="daftarLomba('podcast')"
+                  onclick="daftarLomba('podcast')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</button
                 >
+                  Daftar
+                </button>
                 <a
                   href=""
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
@@ -452,7 +453,7 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Desain Web
                 </p>
@@ -462,7 +463,7 @@
                 class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan Kompetisi perancangan tampilan sebuah web statis
                   atau web yang informasi di dalamnya tidak dapat diubah kecuali
@@ -505,7 +506,7 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Fotografi
                 </p>
@@ -515,7 +516,7 @@
                 class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan kompetisi dalam menyajikan sebuah karya visual
                   berbentuk foto yang bermakna khusus dan informatif. Kompetisi
@@ -558,7 +559,7 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Essai
                 </p>
@@ -568,7 +569,7 @@
                 class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan kompetisi di bidang kepenulisan yang dapat diikuti
                   oleh SMA sederajat dan mahasiswa yang berstatus aktif dari
@@ -611,7 +612,7 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="text-shadow-hero-lg text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Poster
                 </p>
@@ -621,7 +622,7 @@
                 class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   merupakan kompetisi yang menyediakan karya visual yang
                   berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
@@ -653,130 +654,161 @@
     </div>
 
     <!-- component -->
-    <div class="mx-auto h-full w-full bg-[#1b1b1b]">
-      <div class="pt-36 pb-12 text-center">
-        <h1 href="" class="text-shadow-hero-sm text-5xl font-semibold">
-          Timeline Bytesfest
+    <div class="mx-auto h-full w-full bg-[#1b1b1b] py-16">
+      <div class="text-center">
+        <h1
+          href=""
+          class="mb-3 text-center text-xl font-semibold tracking-wide text-primary-0 sm:text-2xl md:mb-4 md:text-3xl lg:text-4xl"
+        >
+          Timeline Bytes<span class="text-primary-75">fest</span>
+          <span
+            class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text text-transparent"
+            >2022</span
+          >
         </h1>
+        <!-- underline-decoration -->
+        <div class="mb-6 flex w-full justify-center md:mb-8">
+          <div class="h-[3px] w-28 bg-primary-100"></div>
+        </div>
       </div>
-      <div class="wrap relative h-full overflow-hidden p-10">
+      <!-- timeline -->
+      <div class="wrap relative h-full overflow-hidden px-5">
+        <!-- line -->
         <div
-          class="border-2-2 absolute mt-3.5 h-full border-l-[4px] border-[#D9D9D9] border-opacity-100 lg:h-3/4"
+          class="border-2-2 absolute h-full border-l-[2px] border-neutral-0 border-opacity-100 lg:h-full"
           style="left: 50%"
         ></div>
         <!-- right timeline -->
         <div
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
+          <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
             >
-              28 September - 8 Oktober 2022
+              <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
           </div>
+          <!-- left -->
           <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-normal text-white">
+            <h3 class="text-sm font-normal text-white">
               Registrasi Lomba Batch 1
             </h3>
           </div>
         </div>
+
+        <!-- right timeline -->
         <div
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
+          <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
             >
-              9 Oktober - 13 Oktober 2022
+              <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
           </div>
+          <!-- left -->
           <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-normal text-white">
-              Pengumpulan Karya Batch 1
+            <h3 class="text-sm font-normal text-white">
+              Registrasi Lomba Batch 1
             </h3>
           </div>
         </div>
+
+        <!-- right timeline -->
         <div
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
+          <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
             >
-              9 Oktober - 22 Oktober 2022
+              <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
           </div>
+          <!-- left -->
           <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-normal text-white">
-              Registrasi Lomba Batch 2
+            <h3 class="text-sm font-normal text-white">
+              Registrasi Lomba Batch 1
             </h3>
           </div>
         </div>
+
         <div
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
+          <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-normal text-white">
+            <h3 class="text-sm font-normal text-white">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
+          <!-- left -->
           <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
             >
-              23 Oktober - 2 November 2022
+              <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
           </div>
         </div>
-        <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
-        >
-          <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-normal text-white">
-              Open Registrasi Seminar
-            </h3>
-          </div>
 
-          <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
-          ></div>
-          <div class="order-1 flex w-5/12 justify-start">
-            <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
-            >
-              28 Oktober - 11 November 2022
-            </h3>
-          </div>
-        </div>
         <div
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
+          <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-normal text-white">
-              Seminar, Awarding, & Puncak Acara
+            <h3 class="text-sm font-normal text-white">
+              Pengumpulan Karya Batch 2
             </h3>
           </div>
+          <!-- left -->
           <div
-            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
             >
-              12 November 2022
+              <b>23</b> Oktober - <b>2</b> November 2022
+            </h3>
+          </div>
+        </div>
+
+        <div
+          class="right-timeline mb-8 flex w-full items-center justify-between"
+        >
+          <!-- right -->
+          <div class="order-1 flex w-5/12 justify-end">
+            <h3 class="text-sm font-normal text-white">
+              Pengumpulan Karya Batch 2
+            </h3>
+          </div>
+          <!-- left -->
+          <div
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+          ></div>
+          <div class="order-1 flex w-5/12 justify-start">
+            <h3
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+            >
+              <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
           </div>
         </div>
@@ -871,7 +903,7 @@
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div
-      class="relative z-50 opacity-0 hidden transition duration-700"
+      class="relative z-50 hidden opacity-0 transition duration-700"
       aria-labelledby="modal-title"
       role="dialog"
       aria-modal="true"
@@ -887,15 +919,14 @@
 		From: "opacity-100"
 		To: "opacity-0"
 	-->
-      
 
       <div class="fixed inset-0 z-10 overflow-y-auto">
-		<div
-			class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity duration-1000 z-20"
-			id="backdrop"
-		></div>
         <div
-          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0 z-40"
+          class="fixed inset-0 z-20 bg-gray-500 bg-opacity-75 transition-opacity duration-1000"
+          id="backdrop"
+        ></div>
+        <div
+          class="absolute left-1/2 top-1/2 z-40 -translate-x-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0"
         >
           <!--
 		  Modal panel, show/hide based on modal state.
@@ -913,7 +944,7 @@
             <div class="relative z-0 h-32 w-full">
               <img
                 src="/assets/img/mascot-main.png"
-                class="absolute top-[-10rem] left-1/2 -translate-x-1/2 z-0 w-2/3"
+                class="absolute top-[-10rem] left-1/2 z-0 w-2/3 -translate-x-1/2"
               />
             </div>
             <div class="relative z-50 rounded-[3.5rem] bg-primary-400">
@@ -932,16 +963,16 @@
               <div class="pt-6 text-center text-xl">
                 <a
                   id="btnRegistrasi"
-				  target="_blank"
-                  class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl block"
+                  target="_blank"
+                  class="block w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
                 >
                   Registrasi
                 </a>
               </div>
               <div class="pt-6 pb-16 text-center text-xl">
                 <button
-				  id="btnKonfirmasi"
-				  target="_blank"
+                  id="btnKonfirmasi"
+                  target="_blank"
                   class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
                 >
                   Konfirmasi Pembayaran
