tatabahasa, footer margin, gaskeun button

--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,7 @@
                   Bytesfest merupakan event tahunan yang diselenggarakan oleh
                   himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
                   Komputer Universitas Sebelas Maret. Bytesfest tahun 2022 yang
-                  mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia” ).
+                  mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia”).
                 </p>
                 <p
                   class="text-sm leading-relaxed text-neutral-50 md:leading-loose"
@@ -322,7 +322,7 @@
               <h5
                 class="text-shadow-hero-md mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
               >
-                Filosofi mascot
+                Filosofi Maskot
               </h5>
               <!-- underline-decoration -->
               <div class="mb-5 flex w-full justify-center sm:justify-start">
@@ -378,7 +378,7 @@
           <div class="h-[3px] w-28 bg-primary-100"></div>
         </div>
         <p class="text-center text-xs text-neutral-100">
-          - geser untuk info lomba lainya -
+          - GESER UNTUK INFO LOMBA LAINNYA -
         </p>
       </div>
       <!-- swipper-js -->
@@ -624,7 +624,7 @@
                 <p
                   class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
-                  merupakan kompetisi yang menyediakan karya visual yang
+                  Merupakan kompetisi yang menyediakan karya visual yang
                   berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
                   terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi
                   Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif
@@ -818,7 +818,7 @@
     <footer class="bg-footer">
       <div class="container mx-auto w-full">
         <div class="w-full grid grid-cols-1 grid-rows-3 lg:grid-rows-1 lg:grid-cols-12 grid-flow-col lg:gap-4">
-          <div class="lg:col-span-3 my-6 lg:mt-4">
+          <div class="lg:col-span-3 my-6 lg:my-0 mt-4">
             <img
               class="mx-auto h-40 lg:h-64 max-w-full object-cover"
               src="../assets/img/dangle-footer.svg"
@@ -965,7 +965,7 @@
                   </div>
                 </div>
               </div>
-              <div class="pt-6 text-center text-xl">
+              <div class="pt-6 text-center text-xl px-8">
                 <a
                   id="btnRegistrasi"
                   target="_blank"
@@ -974,11 +974,11 @@
                   Registrasi
                 </a>
               </div>
-              <div class="pt-6 pb-16 text-center text-xl">
+              <div class="pt-6 pb-16 text-center text-xl px-8">
                 <button
                   id="btnKonfirmasi"
                   target="_blank"
-                  class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
+                  class="block w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
                 >
                   Konfirmasi Pembayaran
                 </button>
