update ui timeline

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
                   <a
                     href=""
                     class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
-                    >Payment</a
+                    >Submission</a
                   >
                 </li>
               </ul>
@@ -680,12 +680,12 @@
         ></div>
         <!-- right timeline -->
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline mb-8 flex w-full items-center justify-between md:mb-16"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="md:px-3text-xs md:py-3font-normal bg-primary-75 px-2 py-2 text-neutral-900 shadow-xl md:text-sm"
             >
               <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
@@ -695,7 +695,7 @@
             class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Registrasi Lomba Batch 1
             </h3>
           </div>
@@ -703,22 +703,22 @@
 
         <!-- right timeline -->
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline mb-8 flex w-full items-center justify-between md:mb-16"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="md:px-3text-xs md:py-3font-normal bg-primary-75 px-2 py-2 text-neutral-900 shadow-xl md:text-sm"
             >
               <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
           </div>
           <!-- left -->
           <div
-            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-75 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Registrasi Lomba Batch 1
             </h3>
           </div>
@@ -726,43 +726,43 @@
 
         <!-- right timeline -->
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline mb-8 flex w-full items-center justify-between md:mb-16"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="md:py-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:px-3 md:text-sm"
             >
               <b>28</b> September - <b>8</b> Oktober 2022
             </h3>
           </div>
           <!-- left -->
           <div
-            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-100 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Registrasi Lomba Batch 1
             </h3>
           </div>
         </div>
 
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline mb-8 flex w-full items-center justify-between md:mb-16"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
           <!-- left -->
           <div
-            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-200 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="md:px-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
               <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
@@ -770,21 +770,21 @@
         </div>
 
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline mb-8 flex w-full items-center justify-between md:mb-16"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
           <!-- left -->
           <div
-            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-300 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="md:px-3text-xs bg-primary-75 px-2 py-2 font-normal text-neutral-900 shadow-xl md:py-3 md:text-sm"
             >
               <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
@@ -792,21 +792,21 @@
         </div>
 
         <div
-          class="right-timeline mb-8 flex w-full items-center justify-between"
+          class="right-timeline md:mb162 mb-8 flex w-full items-center justify-between"
         >
           <!-- right -->
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-sm font-normal text-white">
+            <h3 class="text-sm font-normal text-white md:text-base">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
           <!-- left -->
           <div
-            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-50 shadow-xl"
+            class="z-20 order-1 flex h-5 w-5 items-center rounded-full bg-primary-400 shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl"
+              class="bg-primary-75 px-2 py-2 text-xs font-normal text-neutral-900 shadow-xl md:py-3 md:px-3 md:text-sm"
             >
               <b>23</b> Oktober - <b>2</b> November 2022
             </h3>
@@ -817,16 +817,18 @@
 
     <footer class="bg-footer">
       <div class="container mx-auto w-full">
-        <div class="w-full grid grid-cols-1 grid-rows-3 lg:grid-rows-1 lg:grid-cols-12 grid-flow-col lg:gap-4">
-          <div class="lg:col-span-3 my-6 lg:my-0 mt-4">
+        <div
+          class="grid w-full grid-flow-col grid-cols-1 grid-rows-3 lg:grid-cols-12 lg:grid-rows-1 lg:gap-4"
+        >
+          <div class="my-6 mt-4 lg:col-span-3 lg:my-0">
             <img
-              class="mx-auto h-40 lg:h-64 max-w-full object-cover"
+              class="mx-auto h-40 max-w-full object-cover lg:h-64"
               src="../assets/img/dangle-footer.svg"
             />
           </div>
-          <div class="mt-4 lg:mt-16 text-center lg:col-span-6">
+          <div class="mt-4 text-center lg:col-span-6 lg:mt-16">
             <div class="flex-col">
-              <div class="mb-5 text-2xl lg:text-4xl font-bold">
+              <div class="mb-5 text-2xl font-bold lg:text-4xl">
                 <h1>Bytesfest 2022</h1>
               </div>
               <div class="mb-5 font-light">
@@ -837,7 +839,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:mt-16 lg:text-center lg:col-span-3">
+          <div class="lg:col-span-3 lg:mt-16 lg:text-center">
             <div class="flex-col items-center text-center lg:text-center">
               <div class="text-md mt-2 font-light">
                 <h2 class="mb-5 text-xl font-light">Contact Person</h2>
@@ -849,31 +851,47 @@
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
                 >
-					<img class="h-7 w-7" src="/assets/img/icon-mailbox.png" alt="">
-				</a>
-				<a
-                  href="https://www.instagram.com/bytesfest"
-                  target="_blank"
-                  rel="noreferrer"
-                  class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
-                >
-					<img class="h-7 w-7" src="/assets/img/icon-instagram.png" alt="">
+                  <img
+                    class="h-7 w-7"
+                    src="/assets/img/icon-mailbox.png"
+                    alt=""
+                  />
                 </a>
-				<a
+                <a
                   href="https://www.instagram.com/bytesfest"
                   target="_blank"
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
                 >
-					<img class="h-7 w-7" src="/assets/img/icon-tik-tok.png" alt="">
+                  <img
+                    class="h-7 w-7"
+                    src="/assets/img/icon-instagram.png"
+                    alt=""
+                  />
                 </a>
-				<a
+                <a
                   href="https://www.instagram.com/bytesfest"
                   target="_blank"
                   rel="noreferrer"
                   class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
                 >
-					<img class="h-7 w-7" src="/assets/img/icon-whatsapp.png" alt="">
+                  <img
+                    class="h-7 w-7"
+                    src="/assets/img/icon-tik-tok.png"
+                    alt=""
+                  />
+                </a>
+                <a
+                  href="https://www.instagram.com/bytesfest"
+                  target="_blank"
+                  rel="noreferrer"
+                  class="text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-100"
+                >
+                  <img
+                    class="h-7 w-7"
+                    src="/assets/img/icon-whatsapp.png"
+                    alt=""
+                  />
                 </a>
               </div>
             </div>
@@ -965,7 +983,7 @@
                   </div>
                 </div>
               </div>
-              <div class="pt-6 text-center text-xl px-8">
+              <div class="px-8 pt-6 text-center text-xl">
                 <a
                   id="btnRegistrasi"
                   target="_blank"
@@ -974,7 +992,7 @@
                   Registrasi
                 </a>
               </div>
-              <div class="pt-6 pb-16 text-center text-xl px-8">
+              <div class="px-8 pt-6 pb-16 text-center text-xl">
                 <button
                   id="btnKonfirmasi"
                   target="_blank"
