add function in each button competition

--- a/src/index.html
+++ b/src/index.html
@@ -432,7 +432,8 @@
                   Daftar
                 </button>
                 <a
-                  href=""
+                  href="https://link-guidebook"
+				  target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
                 >
@@ -450,7 +451,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-web.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -479,13 +480,14 @@
               <div
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
-                <a
-                  href=""
+                <button
+				  onclick="daftarLomba('web')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</a
+                  >Daftar</button
                 >
                 <a
-                  href=""
+				  href="https://link-guidebook"
+				  target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
                 >
@@ -503,7 +505,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-fotografi.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -533,13 +535,14 @@
               <div
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
-                <a
-                  href=""
+                <button
+				  onclick="daftarLomba('fotografi')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</a
+                  >Daftar</button
                 >
                 <a
-                  href=""
+				  href="https://link-guidebook"
+				  target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
                 >
@@ -556,7 +559,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-essai.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -585,13 +588,14 @@
               <div
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
-                <a
-                  href=""
+                <button
+				  onclick="daftarLomba('essai')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</a
+                  >Daftar</button
                 >
                 <a
-                  href=""
+				  href="https://link-guidebook"
+				  target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
                 >
@@ -609,7 +613,7 @@
                 class="-lg:z-10 relative flex h-36 w-full items-center justify-center sm:h-52 lg:absolute lg:h-full"
               >
                 <img
-                  src="/assets//img/lomba-podcast.png"
+                  src="/assets//img/lomba-poster.png"
                   alt=""
                   class="h-full w-full object-cover"
                 />
@@ -637,13 +641,14 @@
               <div
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
-                <a
-                  href=""
+                <button
+				  onclick="daftarLomba('poster')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</a
+                  >Daftar</button
                 >
                 <a
-                  href=""
+				  href="https://link-guidebook"
+				  target="_blank"
                   class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
                   >Guidebook ></a
                 >
@@ -977,13 +982,13 @@
                 </a>
               </div>
               <div class="pt-6 pb-16 text-center text-xl px-8">
-                <button
+                <a
                   id="btnKonfirmasi"
                   target="_blank"
                   class="block w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
                 >
                   Konfirmasi Pembayaran
-                </button>
+                </a>
               </div>
             </div>
           </div>
