--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
     <!-- navigation-end -->
 
     <div
-      class="h-[100vh] w-full bg-slate-900 bg-cover bg-left"
+      class="h-[90vh] lg:h-[100vh] w-full bg-slate-900 bg-cover bg-left"
       style="background-image: url('../assets/img/hero-img.png')"
 	  id="home"
     >
